sign in, sign up screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,4 @@
-{}
+{
+  "title_splash": "SHARE YOUR MOMENT WITH FRIENDS",
+ "description": "Lorem ipsum dolor sit amet, consectetur adipistsing alit. Lorem agestas congue sit pellentesque vel ut in."
+}
