--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -1,1 +1,4 @@
-{}
+{
+  "title_splash": "CHIA SẺ KHOẢNH KHẮC VỚI BẠN BÈ",
+  "description": "hsadsahdaskd isaud saihdsaih dh ashsaih ía dsadash"
+}
